--- a/app/views/event/_location_descr.rhtml
+++ b/app/views/event/_location_descr.rhtml
@@ -1,11 +1,11 @@
-<div class="form_field"><label for="location_description"><%= 'Description'.t %></label><br/>
+<div class="form_field"><label for="location_description"><%= t(:description) %></label><br/>
 <%= text_field 'location', 'description'  %></div>
 
-<div class="form_field"><label for="location_url"><%= 'URL'.t %></label><br/>
+<div class="form_field"><label for="location_url"><%= t(:url) %></label><br/>
 <%= text_field 'location', 'url'  %></div>
 
-<div class="form_field"><label for="location_email"><%= 'Email'.t %></label><br/>
+<div class="form_field"><label for="location_email"><%= t(:email) %></label><br/>
 <%= text_field 'location', 'email'  %></div>
 
-<div class="form_field"><label for="location_phone"><%= 'Phone'.t %></label><br/>
+<div class="form_field"><label for="location_phone"><%= t(:phone) %></label><br/>
 <%= text_field 'location', 'phone'  %></div>
