--- a/app/views/event/_locations.rhtml
+++ b/app/views/event/_locations.rhtml
@@ -6,7 +6,7 @@
 </li>
 <% end -%>
 <li class="location">
-<div class="name"><%= 'Not listet? Add a new venue...'.t %></div>
+<div class="name"><%= t(:not_listed_venue) %></div>
 <div class="metro"><span class="informal"></span></div>
 </li>
 </ul>
