--- a/app/views/event/about.rhtml
+++ b/app/views/event/about.rhtml
@@ -36,7 +36,7 @@
 <div class="event-description">
 	<h2>Contacting Eventicus</h2>
 	<div class="data">
-		<p>Eventicus is based in Hanover, Germany.</p>
+		<p>Eventicus is based in Hamburg, Germany.</p>
 		<p>Here's how you can reach me...</p>
 		<ul>
 		    <li>...for feedback on Eventicus</li>
@@ -48,10 +48,10 @@
 		<p><b>Mail address:</b><br />
 		<i>Eventicus<br />
 		Mathias Karstädt<br />
-		Zimmermannstr. 5<br />
-		30453 Hannover</i><br />
+		Schillerstraße. 35<br />
+		22767 Hamburg</i><br />
 		<br />
-		<b>Phone:</b> <i>+49 (511) 696 86 97</i><br />
+		<b>Phone:</b> <i>+49 (040) 67309098</i><br />
 		<b>Email:</b> <i>mathias [dot] karstaedt [at] gmail [dot] com</i><br />
 		<b>URL:</b> <i><a href="http://www.eventicus.com">eventicus.com</a></i>
 		</p>
