--- a/app/views/event/_location_data.rhtml
+++ b/app/views/event/_location_data.rhtml
@@ -1,8 +1,8 @@
-<div class="form_field"><label for="location_name"><%= 'Name'.t %></label><br/>
+<div class="form_field"><label for="location_name"><%= t(:name) %></label><br/>
 <%= text_field 'location', 'name'  %></div>	
 
-<div class="form_field"><label for="location_street"><%= 'Street'.t %></label><br/>
+<div class="form_field"><label for="location_street"><%= t(:street) %></label><br/>
 <%= text_field 'location', 'street'  %></div>
 
-<div class="form_field"><label for="location_zip"><%= 'ZIP'.t %></label><br/>
+<div class="form_field"><label for="location_zip"><%= t(:zip) %></label><br/>
 <%= text_field 'location', 'zip'  %></div>
