--- a/app/views/event/_metro_data.rhtml
+++ b/app/views/event/_metro_data.rhtml
@@ -1,8 +1,8 @@
-<div class="form_field"><label for="metro_name"><%= 'Metro Name'.t %></label><br/>
+<div class="form_field"><label for="metro_name"><%= t(:metro_name) %></label><br/>
 <%= text_field 'metro', 'name'  %></div>	
 
-<div class="form_field"><label for="metro_state"><%= 'State'.t %></label><br/>
+<div class="form_field"><label for="metro_state"><%= t(:state) %></label><br/>
 <%= text_field 'metro', 'state'  %></div>	
 
-<div class="form_field"><label for="metro_county"><%= 'Country'.t %></label><br/>
+<div class="form_field"><label for="metro_county"><%= t(:country) %></label><br/>
 <%= text_field 'metro', 'country'  %></div>	
