--- a/app/views/event/_metros.rhtml
+++ b/app/views/event/_metros.rhtml
@@ -6,7 +6,7 @@
 </li>
 <% end -%>
 <li class="location">
-<div class="name"><%= 'Not listet? Add new metro...'.t %></div>
+<div class="name"><%= t(:metro_not_listed) %></div>
 <div class="metro"><span class="informal"></span></div>
 </li>
 </ul>
