--- a/app/views/event/_selectedmetro.rhtml
+++ b/app/views/event/_selectedmetro.rhtml
@@ -1,11 +1,11 @@
 <div class="metro_name form_field">
-	<label><%= 'Metro Name'.t %></label><br /><%= @metro.name %>
+	<label><%= t(:metro_name) %></label><br /><%= @metro.name %>
 </div>
 <div class="metro_state form_field">
-	<label><%= 'State'.t %></label><br /><%= @metro.state %>
+	<label><%= t(:statte) %></label><br /><%= @metro.state %>
 </div>
 <div class="metro_country form_field">
-	<label><%= 'Country'.t %></label><br /><%= @metro.country %>
+	<label><%= t(:country) %></label><br /><%= @metro.country %>
 </div>
 <div>
 	<%= hidden_field 'location', 'metro_id', {:value => @metro.id} %>
