--- a/app/views/layouts/blog.rhtml
+++ b/app/views/layouts/blog.rhtml
@@ -34,7 +34,7 @@
 					<ul id="mainmenu">
 						<li <%= 'class="active"' if params[:menu] == "events" %>>
 							<% #link_to "Events", events_url(:place => params[:place], :type => params[:type], :category => params[:category], :range => params[:range]) %>
-							<%= link_to "Events".t, events_url() %>
+							<%= link_to t(:events), events_url() %>
 						</li>
 					<!--
 						<li <%= 'class="active"' if params[:menu] == "reviews" %>>
@@ -45,7 +45,7 @@
 						</li>
 					-->
 						<li <%= 'class="active"' if params[:menu] == "blog" %>>
-							<%= link_to "Blog".t, blogposts_url() %>
+							<%= link_to t(:blog), blogposts_url() %>
 						</li>
 					</ul>
 					
@@ -53,10 +53,10 @@
 						<ul>
 						<% if session['user'] %>
 							<li><%= link_to session['user'].login, user_url(:id => session['user'].login) %></li>
-							<li><%= link_to "Logout".t, { :controller => "account", :action => "logout"} %></li>
+							<li><%= link_to t(:logout), { :controller => "account", :action => "logout"} %></li>
 						<% else %>
-							<li><%= link_to "Join Us".t, { :controller => "account", :action => "signup"} %></li>
-							<li><%= link_to "Login".t, { :controller => "account", :action => "login"} %></li>
+							<li><%= link_to t(:join_us), { :controller => "account", :action => "signup"} %></li>
+							<li><%= link_to t(:login), { :controller => "account", :action => "login"} %></li>
 						<% end %>
 							<li>
 								<input class="noborder" type="text" name="search" value="Search Events" id="search" />
@@ -146,8 +146,8 @@
 			
 			<div id="footer">
 				Copyright 2007-<%= Date.today.year %> by eventicus.de - All rights reserved 
-				| <%= link_to "About and Contact".t, :controller => 'event', :action => 'about' %> 
-				| <a href="http://groups.google.com/group/eventicus/topics"><%= 'Discussions'.t %></a>
+				| <%= link_to t(:about_and_contact), :controller => 'event', :action => 'about' %> 
+				| <a href="http://groups.google.com/group/eventicus/topics"><%= t(:discussions) %></a>
 			</div>
 			
 		</div>	
