--- a/app/views/event/show.rhtml
+++ b/app/views/event/show.rhtml
@@ -25,24 +25,6 @@
 	</script>		
 <% end %>
 
-<% content_for("title") do %>
-	<%=h @event.title %>
-<% end %>
-
-<% content_for("icons") do %>
-
-	<% if session['user'] %>
-	<span id="category_description">
-		<% if @event.attendees.find_by_user_id session['user'].id %>
-			(<%= t(:i_am_going) %>)
-		<% else%>
-			(<%= link_to t(:attend), attend_path(:id => @event, :metro => @event.location.metro) %>)
-		<% end %>
-	</span>
-	<% end %>
-
-<% end %>
-
 
 <% content_for("sidebox") do %>
   <%= render :partial => 'sidebar_standard' %>
@@ -71,7 +53,29 @@
 	<% end %>
 <% end %>
 
-<div class="vevent vcalendar event">
+<% content_for("title") do %>
+	Event Info
+<% end %>
+
+<% content_for("icons") do %>
+	<% if session['user'] %>
+	<span id="category_description">
+		<% if @event.attendees.find_by_user_id session['user'].id %>
+			(<%= t(:i_am_going) %>)
+		<% else%>
+			(<%= link_to t(:attend), attend_path(:id => @event, :metro => @event.location.metro) %>)
+		<% end %>
+	</span>
+	<% end %>
+<% end %>
+
+<div class="vevent vcalendar event" style="margin-top: -20px">
+
+	<div id="event-title">
+		<h1>
+			<%=h @event.title %>
+		</h1>
+	</div>
 
 	<div class="event-user">
 		<% if @event.scrapingid %>
@@ -168,7 +172,6 @@
 			
 		</div>
 		<% end %>
-
 
 	</div>
 
