--- a/public/stylesheets/eventicus.css
+++ b/public/stylesheets/eventicus.css
@@ -15,6 +15,7 @@ a {
 	outline-style: none;
 	outline-width: medium;
 }
+
 a:hover {
 	color: #000000;
 }
@@ -320,15 +321,12 @@ ul#mainmenu li.active a {
 	padding: 5px 5px 0px 10px;
 }
 
-#bodyheader #category_name {
+#category_name {
 	float: left;
-	font-size: 20px;
+	font-size: 22px;
 	font-weight: bold;
-	color: #666600;
-}
-#bodyheader #category_name #category_description {
-	color: #CCCC99;
-	font-size: 16px;
+	color: #CCCC33;
+	padding: 3px 0px;
 }
 #bodyheader #selection {
 	float: right;
@@ -357,6 +355,10 @@ ul#mainmenu li.active a {
 	background-color: #FFFFFF;
 }
 
+#category_description {
+	color: #CCCC99;
+	font-size: 16px;
+}
 
 #bodycontent {
 	padding: 10px;
@@ -364,6 +366,12 @@ ul#mainmenu li.active a {
 }
 #bodycontent #maincontent {
 	margin-right: 260px;
+}
+#bodycontent #maincontent #event-title h1 {
+	margin: 0px 0px 10px;
+	font-size: 26px;
+	font-weight: bold;
+	color: #666600;
 }
 #bodycontent #rightcontent {
 	clear: left;
@@ -505,9 +513,12 @@ ul.recent-posts li a {
 	font-size: 110%;
 	font-weight: normal;
 	letter-spacing: -0.02em;
-	line-height: 1.1;
+	line-height: 130%;
 	color: #4E463F;
 	margin: 0px;
+}
+#maincontent .event-summary .event-body h3 a {
+	text-decoration: none;
 }
 #maincontent .event-summary .event-body p {
 	line-height: 1.3;
@@ -558,11 +569,11 @@ ul.recent-posts li a {
 }
 
 #maincontent .event-summary .event-location {
+	text-align: right;
 	position: absolute;
 	top: 10px;
 	right: 10px;
 	_right: 310px;
-	width: 100px;
 	font-size: 75%;
 	color: #999999;
 }
@@ -743,6 +754,11 @@ div.errorExplanation ul {
 /* End Error Styles */
 
 /* Begin Event Styles */
+.vevent,
+.vcalendar {
+	margin: 0px;
+	padding: 0px;
+}
 .event {
 	font-size: 83%;
 }
