--- a/app/views/event/_events.rhtml
+++ b/app/views/event/_events.rhtml
@@ -30,9 +30,9 @@
 		</div>
 	</div>
 	<div class="event-location">
-		<div class="location-name"><%=h event.location.name %></div>
-		<div class="address"><%=h event.location.street %><br />
-		<%=h event.location.zip %> <%= link_to event.location.metro.name, events_url(:place => event.location.metro) %></div>
+		<span class="location-name"><%=h event.location.name %></span><br />
+		<span class="address"><%=h event.location.street %><br />
+		<%=h event.location.zip %> <%= link_to event.location.metro.name, events_url(:place => event.location.metro) %></span>
 	</div>
 	<div class="event-date">
 		<strong class="event-day"><span class="day"><%= event.date_start.in_time_zone.strftime('%d') %></span><br /><span class="month"><%= event.date_start.in_time_zone.strftime('%b %Y') %></span></strong>
