--- a/public/stylesheets/eventicus.css
+++ b/public/stylesheets/eventicus.css
@@ -896,3 +896,55 @@ div.errorExplanation ul {
 }
 
 /* End New Location Styles */
+
+.pagination {
+	margin: 20px 0px;
+}
+.pagination  a {
+  border-style: solid;
+  border-width: 2px 1px 1px 2px; 
+  border-color: #FFFFCC #666600 #666600 #FFFFCC; 
+  padding: 4px; 
+  background-color: rgb(204, 204, 51); 
+  -moz-border-radius: 6px; 
+  -webkit-border-radius: 6px;
+  margin-bottom: 10px; 
+  text-align: center; 
+  text-decoration: none;
+  color: #666600;
+  font-weight: bold;
+}
+.pagination span.disabled {
+  border-style: solid;
+  border-width: 2px 1px 1px 2px; 
+  border-color: #FFFFCC #666600 #666600 #FFFFCC; 
+  padding: 4px; 
+  background-color: #FFFFCC; 
+  -moz-border-radius: 6px; 
+  -webkit-border-radius: 6px;
+  margin-bottom: 10px; 
+  text-align: center; 
+  text-decoration: none;
+  color: #666600;
+  font-weight: bold;
+}
+.pagination span.current {
+  border-style: solid;
+  border-width: 2px 1px 1px 2px; 
+  border-color: #FFFFCC #666600 #666600 #FFFFCC; 
+  padding: 4px; 
+  background-color: #666600; 
+  -moz-border-radius: 6px; 
+  -webkit-border-radius: 6px;
+  margin-bottom: 10px; 
+  text-align: center; 
+  text-decoration: none;
+  color: #FFFFCC;
+  font-weight: bold;
+}
+
+.pagination a:hover {
+  border-color: #666600 #FFFFCC #FFFFCC #666600; 
+  border-width: 1px 2px 2px 1px; 
+  color: #ffffff;
+}
