--- a/app/views/layouts/eventicus.rhtml
+++ b/app/views/layouts/eventicus.rhtml
@@ -66,7 +66,7 @@
 					<ul>
 						<% for cat in categories %>
 							<li <%= 'class="active"' if params[:category] == cat.short %>>
-								<%= link_to cat.name, events_url(:place => params[:place], :type => params[:type], :category => cat.short, :range => params[:range]) %>
+								<%= link_to t(cat.name.downcase.to_sym, :scope => :categories), events_url(:place => params[:place], :type => params[:type], :category => cat.short, :range => params[:range]) %>
 							</li>
 						<% end %>
 					</ul>
@@ -77,7 +77,7 @@
 					<ul>
 						<% ranges.each do |range| %>
 							<li <%= 'class="active"' if params[:range] == range[:key] %>>
-								<%= link_to range[:title], events_url(:place => params[:place], :type => params[:type], :category => params[:category], :range => range[:key]) %>
+								<%= link_to t(range[:title].downcase.to_sym, :scope => :ranges), events_url(:place => params[:place], :type => params[:type], :category => params[:category], :range => range[:key]) %>
 							</li>
 						<% end %>
 						<li class="newEvent">
