Facebook Fan Box eingebunden

--- a/app/views/event/show.rhtml
+++ b/app/views/event/show.rhtml
@@ -52,6 +52,12 @@
 	</span>
 	<% end %>
 	
+	<h3>Werde Fan</h3>
+	<div>
+		<fb:fan profile_id="68339386368" stream="1" connections="10" logobar="1" width="230"></fb:fan><div style="font-size:8px; padding-left:10px"><a href="http://www.facebook.com/pages/Eventicusde/68339386368">Eventicus.de</a> on Facebook</div>
+	</div>
+	
+	
 <% end %>
 
 <% content_for("tabs") do %>
