--- a/app/views/event/list.rhtml
+++ b/app/views/event/list.rhtml
@@ -34,6 +34,11 @@
 	<br /><br />
 	<h3><%= t(:recent_blog_posts) %></h3>
 	<%= render :partial => 'blog/recentposts' %>
+	<br /><br />
+	<h3><%= t(:become_fan) %></h3>
+	<div>
+		<fb:fan profile_id="68339386368" stream="0" connections="10" logobar="1" width="230"></fb:fan><div style="font-size:8px; padding-left:10px"><a href="http://www.facebook.com/pages/Eventicusde/68339386368">Eventicus.de</a> on Facebook</div>
+	</div>
 <% end %>
 
 <%= render :partial => 'events' %>
